crates/loxia-tui/src/modals/snapshots/loxia_tui__modals__sort_profile__tests__sort_profile_snapshot.snap
---
source: crates/loxia-tui/src/modals/sort_profile.rs
assertion_line: 365
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 90, height: 20 },
    content: [
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "      ┌SORT PROFILE────────────────────────────────────────────────────────────────┐      ",
        "      │Apply to: (•) Active Queue   ( ) Current Column                             │      ",
        "      │                                                                            │      ",
        "      │  • chronological_discog                                                    │      ",
        "      │    album_artist ↑ · year ↑ · album ↑ · track_number ↑                      │      ",
        "      │▶   release_chronology                                                      │      ",
        "      │    year ↓ · album ↑ · track_number ↑                                       │      ",
        "      │    name_only                                                               │      ",
        "      │    name ↑                                                                  │      ",
        "      │                                                                            │      ",
        "      │[ Enter ] Apply    [ e ] Edit profiles    [ Esc ] Cancel                    │      ",
        "      └────────────────────────────────────────────────────────────────────────────┘      ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 10, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 12, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 13, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 13, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 14, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 14, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 14, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 15, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
